[package]
name = "scripts"
version = "0.1.0"
authors = ["Bluelief"]
description = ""
repository = ""
readme = "README.md"
license = "Apache-2.0/MIT"
categories = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ['attributes'] }
async-task = { version = "4.3.0" }
tide = { path = "./tide", features = ['sse'] }
http-types = { version = "2.12.0" }

[patch.crates-io]
async-task = { path = "./async-task" }
